--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,8 @@ name: Release
 
 on:
   push:
-    branches: 
-      - "*"
+    tags:
+      - 'v*.*.*'  # Trigger on version tags
 
 jobs:
   release:
@@ -29,4 +29,4 @@ jobs:
           draft: true  # Create the release as a draft
           files: ./sipnet  # Path to the compiled binary
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
