--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y doxygen graphviz
 
       - name: Generate Documentation
-        run: doxygen docs/Doxyfile
+        run: make document
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
