--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
           pip install mkdocs mkdocs-material
 
       - name: Generate Documentation
-        run: doxygen docs/Doxyfile
+        run: make document
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
